<resources>
    <string name="app_name">Payconiq Test</string>
    <string name="msg_data_fetch_error">Can not fetch data from network</string>
    <string name="action_retry">Retry</string>

    <!--Repository-->
    <string name="repo_private">Private:</string>
    <string name="repo_fork">Fork:</string>
    <string name="repo_size">Size:</string>
    <string name="repo_watchers_count">Watchers count:</string>
    <string name="repo_owner">Owner:</string>
    <string name="repo_url">Url:</string>
    <string name="repo_forks_url">Forks url:</string>
    <string name="repo_keys_url">Keys url:</string>
    <string name="repo_collaborators_url">Collaborators url:</string>

    <string name="value_true">True</string>
    <string name="value_false">False</string>
    <string name="value_not_available">N/A</string>

    <string name="date_gson_format">yyyy-MM-dd\'T\'HH:mm:ssZ</string>
    <string name="date_from_gson_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date_display_format">yyyy-MM-dd HH:mm:ss</string>
</resources>
